--- a/compro_property_agensi_ocima/index.html
+++ b/compro_property_agensi_ocima/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Ocima Property</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- Navbar -->
     <nav>
-      <img src="svg/icon_rumah.svg" alt="Icon Rumah" class="nav_icon_rumah" />
+      <img src="svg/home_icon.svg" alt="home_icon" class="nav_home_icon" />
       <p>Ocima Property</p>
       <img src="svg/burger_menu.svg" alt="burger_menu" class="burger_menu" />
     </nav>
@@ -107,10 +107,15 @@
 
         <div class="value-item">
           <div class="value_selling">
-            <img src="images/gambar_2.jpg" alt="Rumah Modern Minimalis" class="Properti_1">
+            <img src="images/gambar_2.jpg" alt="Rumah Modern Minimalis" class="property_img">
             <h3>Rumah Cluster <br>Modern</h3>
             <h2>Rp 850.000.000</h2>
+
+            <div class="home_location">
+              <img src="svg/map_icon.svg" alt="map_icon" class="location_map">
             <p> Bekasi Timur, Jawa Barat</p>
+            </div>
+            
           </div>
           
         </div>
