--- a/compro_property_agensi_ocima/index.html
+++ b/compro_property_agensi_ocima/index.html
@@ -1,81 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ocima Property — Solusi terbaik jual beli rumah, konsultasi KPR, dan properti unggulan di seluruh Indonesia."
+    />
     <title>Ocima Property</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Navbar -->
-    <nav>
-      <img src="svg/home_icon.svg" alt="home_icon" class="nav_home_icon" />
-      <p>Ocima Property</p>
-      <img src="svg/burger_menu.svg" alt="burger_menu" class="burger_menu" />
-    </nav>
+    <!-- Header / Navbar -->
+    <header>
+      <nav>
+        <img src="svg/home_icon.svg" alt="Ikon Home" class="nav_home_icon" />
+        <p>Ocima Property</p>
+        <img src="svg/burger_menu.svg" alt="Menu" class="burger_menu" />
+      </nav>
+    </header>
 
-    <!-- Hero Section  -->
-    <section>
-      <div class="hero-section">
+    <!-- Main Content -->
+    <main>
+      <!-- Hero Section -->
+      <section class="hero-section">
         <h1 class="judul">OCIMA PROPERTY</h1>
         <h2 class="sub-judul">Bantu Carikan Rumah Terbaikmu</h2>
         <a href="#" class="btn-konsultasi">Konsultasi Gratis</a>
-      </div>
-    </section>
+      </section>
 
-    <!-- tentang Kami -->
-    <section>
-      <h1 class="tentang_kami">Tentang Kami</h1>
+      <!-- Tentang Kami -->
+      <section>
+        <h2 class="tentang_kami">Tentang Kami</h2>
 
-      <div class="visi_misi">
-        <h3>Visi Kami</h3>
-        <p>
-          Menjadi agensi properti terdepan yang membantu setiap keluarga
-          Indonesia menemukan rumah impian mereka dengan pelayanan yang
-          profesional, transparan, dan terpercaya.
-        </p>
+        <div class="visi_misi">
+          <article>
+            <h3>Visi Kami</h3>
+            <p>
+              Menjadi agensi properti terdepan yang membantu setiap keluarga
+              Indonesia menemukan rumah impian mereka dengan pelayanan yang
+              profesional, transparan, dan terpercaya.
+            </p>
+          </article>
 
-        <h3>Misi Kami</h3>
-        <p>
-          Memberikan solusi properti terbaik melalui layanan konsultasi yang
-          komprehensif, jaringan properti yang luas, dan komitmen untuk kepuasan
-          pelanggan dalam setiap transaksi.
-        </p>
-      </div>
-
-      <div class="stats-container">
-        <div class="stats-item">
-          <h2 class="item-1">500+</h2>
-          <p><small>property Terjual</small></p>
+          <article>
+            <h3>Misi Kami</h3>
+            <p>
+              Memberikan solusi properti terbaik melalui layanan konsultasi yang
+              komprehensif, jaringan properti yang luas, dan komitmen untuk
+              kepuasan pelanggan dalam setiap transaksi.
+            </p>
+          </article>
         </div>
 
-        <div class="stats-item">
-          <h2 class="item-2">1000+</h2>
-          <p><small>Klien Puas</small></p>
+        <div class="stats-container">
+          <div class="stats-item">
+            <h3 class="item-1">500+</h3>
+            <p>Properti Terjual</p>
+          </div>
+          <div class="stats-item">
+            <h3 class="item-2">1000+</h3>
+            <p>Klien Puas</p>
+          </div>
+          <div class="stats-item">
+            <h3 class="item-3">5+</h3>
+            <p>Tahun Pengalaman</p>
+          </div>
+          <div class="stats-item">
+            <h3 class="item-4">50+</h3>
+            <p>Agen Profesional</p>
+          </div>
         </div>
+      </section>
 
-        <div class="stats-item">
-          <h2 class="item-3">5+</h2>
-          <p><small>Tahun Pengalaman</small></p>
-        </div>
-
-        <div class="stats-item">
-          <h2 class="item-4">50+</h2>
-          <p><small>Agen Profesional</small></p>
-        </div>
-      </div>
-    </section>
-
-    <!-- layanan -->
-    <section>
-      <div class="service-container">
-        <h1 class="layanan">Layanan</h1>
-
-        <div class="service-item">
-          <div class="service-item_2">
+      <!-- Layanan -->
+      <section>
+        <h2 class="layanan">Layanan</h2>
+        <div class="service-container">
+          <article class="service-item_2">
             <img
               src="images/handshake-icon.png"
-              alt="hansake_icon"
+              alt="Jual Beli Rumah"
               class="hansake_icon"
             />
             <h3>Jual Beli Rumah</h3>
@@ -84,14 +89,12 @@
               aman, dan transparan. Kami membantu Anda dari survei lokasi hingga
               serah terima kunci.
             </p>
-          </div>
-        </div>
+          </article>
 
-        <div class="service-item">
-          <div class="service-item_2">
+          <article class="service-item_2">
             <img
               src="images/calculator_icon.png"
-              alt="calculator_icon"
+              alt="Konsultasi KPR"
               class="hansake_icon"
             />
             <h3>Konsultasi KPR</h3>
@@ -100,210 +103,175 @@
               bank partner. Kami bantu simulasi cicilan dan proses pengajuan
               hingga pencairan dana.
             </p>
-          </div>
+          </article>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- property unggulan -->
-    <section>
-      <div class="value-container">
-        <h1 class="value">Properti Unggulan</h1>
-
-        <div class="value-item">
-          <div class="value_selling">
+      <!-- Properti Unggulan -->
+      <section>
+        <h2 class="value">Properti Unggulan</h2>
+        <div class="value-container">
+          <article class="value_selling">
             <img
               src="images/gambar_2.jpg"
-              alt="Rumah Modern Minimalis"
+              alt="Rumah Cluster Modern Bekasi Timur"
               class="property_img"
             />
             <h3>Rumah Cluster Modern</h3>
-            <h2>Rp 850.000.000</h2>
-
+            <h4>Rp 850.000.000</h4>
             <div class="home_location">
-              <img src="svg/map_icon.svg" alt="map_icon" class="location_map" />
+              <img src="svg/map_icon.svg" alt="Lokasi" class="location_map" />
               <p>Bekasi Timur, Jawa Barat</p>
             </div>
-
             <div class="point_icon">
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/bed_icon.svg" alt="bed_icon" />
+                  <img src="svg/bed_icon.svg" alt="Kamar Tidur" />
                   <span>3</span>
                 </div>
                 <p>Kamar</p>
               </div>
-
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/bathroom_icon.svg" alt="bathroom_icon" />
+                  <img src="svg/bathroom_icon.svg" alt="Kamar Mandi" />
                   <span>2</span>
                 </div>
                 <p>Kamar Mandi</p>
               </div>
-
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/car_icon.svg" alt="car_icon" />
+                  <img src="svg/car_icon.svg" alt="Garasi" />
                   <span>1</span>
                 </div>
                 <p>Garasi</p>
               </div>
             </div>
+            <a href="#" class="hubungi_sekarang_teks hubungi_sekarang"
+              >Hubungi Sekarang</a
+            >
+          </article>
 
-            <div class="hubungi_sekarang">
-              <a href="#" class="hubungi_sekarang_teks">Hubungi Sekarang</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="value-container">
-        <div class="value-item">
-          <div class="value_selling">
+          <article class="value_selling">
             <img
               src="images/gambar_3.jpg"
-              alt="Rumah Modern Minimalis"
+              alt="Rumah Cluster Modern Bekasi Timur"
               class="property_img"
             />
             <h3>Rumah Cluster Modern</h3>
-            <h2>Rp 850.000.000</h2>
-
+            <h4>Rp 850.000.000</h4>
             <div class="home_location">
-              <img src="svg/map_icon.svg" alt="map_icon" class="location_map" />
+              <img src="svg/map_icon.svg" alt="Lokasi" class="location_map" />
               <p>Bekasi Timur, Jawa Barat</p>
             </div>
-
             <div class="point_icon">
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/bed_icon.svg" alt="bed_icon" />
+                  <img src="svg/bed_icon.svg" alt="Kamar Tidur" />
                   <span>3</span>
                 </div>
                 <p>Kamar</p>
               </div>
-
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/bathroom_icon.svg" alt="bathroom_icon" />
+                  <img src="svg/bathroom_icon.svg" alt="Kamar Mandi" />
                   <span>2</span>
                 </div>
                 <p>Kamar Mandi</p>
               </div>
-
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/car_icon.svg" alt="car_icon" />
+                  <img src="svg/car_icon.svg" alt="Garasi" />
                   <span>1</span>
                 </div>
                 <p>Garasi</p>
               </div>
             </div>
+            <a href="#" class="hubungi_sekarang_teks hubungi_sekarang"
+              >Hubungi Sekarang</a
+            >
+          </article>
 
-            <div class="hubungi_sekarang">
-              <a href="#" class="hubungi_sekarang_teks">Hubungi Sekarang</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="value-container">
-        <div class="value-item">
-          <div class="value_selling">
+          <article class="value_selling">
             <img
               src="images/gambar_3.jpg"
-              alt="Rumah Modern Minimalis"
+              alt="Rumah Cluster Modern Bekasi Timur"
               class="property_img"
             />
             <h3>Rumah Cluster Modern</h3>
-            <h2>Rp 860.000.000</h2>
-
+            <h4>Rp 860.000.000</h4>
             <div class="home_location">
-              <img src="svg/map_icon.svg" alt="map_icon" class="location_map" />
+              <img src="svg/map_icon.svg" alt="Lokasi" class="location_map" />
               <p>Bekasi Timur, Jawa Barat</p>
             </div>
-
             <div class="point_icon">
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/bed_icon.svg" alt="bed_icon" />
+                  <img src="svg/bed_icon.svg" alt="Kamar Tidur" />
                   <span>3</span>
                 </div>
                 <p>Kamar</p>
               </div>
-
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/bathroom_icon.svg" alt="bathroom_icon" />
+                  <img src="svg/bathroom_icon.svg" alt="Kamar Mandi" />
                   <span>2</span>
                 </div>
                 <p>Kamar Mandi</p>
               </div>
-
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/car_icon.svg" alt="car_icon" />
+                  <img src="svg/car_icon.svg" alt="Garasi" />
                   <span>1</span>
                 </div>
                 <p>Garasi</p>
               </div>
             </div>
+            <a href="#" class="hubungi_sekarang_teks hubungi_sekarang"
+              >Hubungi Sekarang</a
+            >
+          </article>
 
-            <div class="hubungi_sekarang">
-              <a href="#" class="hubungi_sekarang_teks">Hubungi Sekarang</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="value-container">
-        <div class="value-item">
-          <div class="value_selling">
+          <article class="value_selling">
             <img
               src="images/gambar_3.jpg"
-              alt="Rumah Modern Minimalis"
+              alt="Rumah Cluster Modern Bekasi Timur"
               class="property_img"
             />
             <h3>Rumah Cluster Modern</h3>
-            <h2>Rp 850.000.000</h2>
-
+            <h4>Rp 850.000.000</h4>
             <div class="home_location">
-              <img src="svg/map_icon.svg" alt="map_icon" class="location_map" />
+              <img src="svg/map_icon.svg" alt="Lokasi" class="location_map" />
               <p>Bekasi Timur, Jawa Barat</p>
             </div>
-
             <div class="point_icon">
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/bed_icon.svg" alt="bed_icon" />
+                  <img src="svg/bed_icon.svg" alt="Kamar Tidur" />
                   <span>3</span>
                 </div>
                 <p>Kamar</p>
               </div>
-
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/bathroom_icon.svg" alt="bathroom_icon" />
+                  <img src="svg/bathroom_icon.svg" alt="Kamar Mandi" />
                   <span>2</span>
                 </div>
                 <p>Kamar Mandi</p>
               </div>
-
               <div class="icon_item">
                 <div class="top">
-                  <img src="svg/car_icon.svg" alt="car_icon" />
+                  <img src="svg/car_icon.svg" alt="Garasi" />
                   <span>1</span>
                 </div>
                 <p>Garasi</p>
               </div>
             </div>
-
-            <div class="hubungi_sekarang">
-              <a href="#" class="hubungi_sekarang_teks">Hubungi Sekarang</a>
-            </div>
-          </div>
+            <a href="#" class="hubungi_sekarang_teks hubungi_sekarang"
+              >Hubungi Sekarang</a
+            >
+          </article>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
