--- a/compro_property_agensi_ocima/index.html
+++ b/compro_property_agensi_ocima/index.html
@@ -30,7 +30,7 @@
       </section>
 
       <!-- Tentang Kami -->
-      <section>
+      <section class="about">
         <h2 class="tentang_kami">Tentang Kami</h2>
 
         <div class="visi_misi">
@@ -74,7 +74,7 @@
       </section>
 
       <!-- Layanan -->
-      <section>
+      <section class="service-section">
         <h2 class="layanan">Layanan</h2>
         <div class="service-container">
           <article class="service-item_2">
@@ -107,10 +107,11 @@
         </div>
       </section>
 
-      <!-- Properti Unggulan -->
-      <section>
+      <!-- Properti Unggulan  -->
+      <section class="superior-property-section">
         <h2 class="value">Properti Unggulan</h2>
         <div class="value-container">
+          <!-- Properti Unggulan 1-->
           <article class="value_selling">
             <img
               src="images/gambar_2.jpg"
@@ -151,6 +152,7 @@
             >
           </article>
 
+          <!-- Properti Unggulan 2 -->
           <article class="value_selling">
             <img
               src="images/gambar_3.jpg"
@@ -191,6 +193,7 @@
             >
           </article>
 
+          <!-- Properti Unggulan 3 -->
           <article class="value_selling">
             <img
               src="images/gambar_3.jpg"
@@ -230,47 +233,74 @@
               >Hubungi Sekarang</a
             >
           </article>
+        </div>
+      </section>
 
-          <article class="value_selling">
-            <img
-              src="images/gambar_3.jpg"
-              alt="Rumah Cluster Modern Bekasi Timur"
-              class="property_img"
-            />
-            <h3>Rumah Cluster Modern</h3>
-            <h4>Rp 850.000.000</h4>
-            <div class="home_location">
-              <img src="svg/map_icon.svg" alt="Lokasi" class="location_map" />
-              <p>Bekasi Timur, Jawa Barat</p>
-            </div>
-            <div class="point_icon">
-              <div class="icon_item">
-                <div class="top">
-                  <img src="svg/bed_icon.svg" alt="Kamar Tidur" />
-                  <span>3</span>
-                </div>
-                <p>Kamar</p>
-              </div>
-              <div class="icon_item">
-                <div class="top">
-                  <img src="svg/bathroom_icon.svg" alt="Kamar Mandi" />
-                  <span>2</span>
-                </div>
-                <p>Kamar Mandi</p>
-              </div>
-              <div class="icon_item">
-                <div class="top">
-                  <img src="svg/car_icon.svg" alt="Garasi" />
-                  <span>1</span>
-                </div>
-                <p>Garasi</p>
+      <!-- Testimoni Klien -->
+      <section class="testimonial-section">
+        <h2 class="testimonial-title">Testimoni Klien</h2>
+
+        <div class="testimonial-container">
+          <!-- Testimonial 1 -->
+          <article class="testimonial-item">
+            <div class="testimonial-top">
+              <img
+                src="images/userprofile_icon.svg"
+                alt="Foto Budi Santoso"
+                class="testimonial-avatar"
+              />
+              <div class="testimonial-client">
+                <h3 class="testimonial-name">Budi Santoso</h3>
+                <p class="testimonial-location">Bekasi</p>
               </div>
             </div>
-            <a href="#" class="hubungi_sekarang_teks hubungi_sekarang"
-              >Hubungi Sekarang</a
-            >
+            <p class="testimonial-text">
+              "Pelayanan Ocima Property sangat profesional. Saya berhasil
+              menemukan rumah impian saya!"
+            </p>
+          </article>
+
+          <!-- Testimonial 2 -->
+          <article class="testimonial-item">
+            <div class="testimonial-top">
+              <img
+                src="images/userprofile_icon.svg"
+                alt="Foto Siti Aminah"
+                class="testimonial-avatar"
+              />
+              <div class="testimonial-client">
+                <h3 class="testimonial-name">Siti Aminah</h3>
+                <p class="testimonial-location">Depok</p>
+              </div>
+            </div>
+            <p class="testimonial-text">
+              "Konsultasi KPRnya mudah dipahami dan sangat membantu."
+            </p>
+          </article>
+
+          <!-- Testimonial 3 -->
+          <article class="testimonial-item">
+            <div class="testimonial-top">
+              <img
+                src="images/userprofile_icon.svg"
+                alt="Foto Rudi Bayu"
+                class="testimonial-avatar"
+              />
+              <div class="testimonial-client">
+                <h3 class="testimonial-name">Rudi Bayu</h3>
+                <p class="testimonial-location">Bekasi</p>
+              </div>
+            </div>
+            <p class="testimonial-text">
+              "Dapat banyak rekomendasi rumah bagus di daerah bekasi."
+            </p>
           </article>
         </div>
+      </section>
+
+      <section class="contact">
+        <h2 class="contact-title">Hubungi Kami</h2>
+        <div class="contact-container"></div>
       </section>
     </main>
   </body>
