--- a/compro_property_agensi_ocima/index.html
+++ b/compro_property_agensi_ocima/index.html
@@ -300,7 +300,14 @@
 
       <section class="contact">
         <h2 class="contact-title">Hubungi Kami</h2>
-        <div class="contact-container"></div>
+        <div class="contact-container">
+          <form action="">
+            <input type="text" placeholder="Nama Lengkap" />
+            <input type="text" placeholder="Email" />
+            <textarea rows="10" placeholder="Pesan"></textarea>
+            <button>Kirim</button>
+          </form>
+        </div>
       </section>
     </main>
   </body>
