--- a/compro_property_agensi_ocima/index.html
+++ b/compro_property_agensi_ocima/index.html
@@ -298,6 +298,7 @@
         </div>
       </section>
 
+      <!-- Contact -->
       <section class="contact">
         <h2 class="contact-title">Hubungi Kami</h2>
         <div class="contact-container">
@@ -308,6 +309,46 @@
             <button>Kirim</button>
           </form>
         </div>
+
+        <h2 class="contact-information-title">Informasi Kontak</h2>
+        <div class="contact-information-container">
+          <div class="contact-information-item">
+            <img src="/svg/phone_icon.svg" alt="telepon" />
+            <div>
+              <h3>Telepon</h3>
+              <span>0895-3758-3937</span>
+            </div>
+          </div>
+
+          <div class="contact-information-item">
+            <img src="/svg/WhatsApp_icon.svg" alt="whatsApp" />
+            <div>
+              <h3>WhatsApp</h3>
+              <span>0895-39485-4938</span>
+            </div>
+          </div>
+
+          <div class="contact-information-item">
+            <img src="/svg/Email_icon.svg" alt="email" />
+            <div>
+              <h3>Email</h3>
+              <span>ocimapropery@gmail.com</span>
+            </div>
+          </div>
+
+          <div class="contact-information-item">
+            <img src="/svg/location_icon.svg" alt="location" />
+            <div>
+              <h3>Alamat</h3>
+              <span>Jakarta</span>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Footer -->
+      <section class="footer">
+        <h2>Ocima Property</h2>
       </section>
     </main>
   </body>
