--- a/compro_property_agensi_ocima/index.html
+++ b/compro_property_agensi_ocima/index.html
@@ -476,7 +476,7 @@
                 <img src="/svg/Email_icon.svg" alt="email" />
                 <div>
                   <h3>Email</h3>
-                  <span>ocima@gmail.com</span>
+                  <span>ocima44@gmail.com</span>
                 </div>
               </div>
               <div class="contact-information-item">
